Fix ul ul spacing issue on cv

--- a/hb-pages/_sass/heidi.scss
+++ b/hb-pages/_sass/heidi.scss
@@ -119,6 +119,10 @@ body {
         margin-top: 0px;
         line-height: 150%;
     }
+
+    ul ul {
+        margin-bottom: 0rem;
+    }
 }
 
 .cv-underline {
